--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.3.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
